# Randomly

./: MANIFEST.in  README.md  codeql-analysis.yml  index.md  pyproject.toml  requirements-dev.txt
.github/workflows/: .coveragerc  ci.yml  codeql-analysis.yml
_site/docs/: docs.md
docs/: docs.md
randomit/: __init__.py  random_names_surnames.py  random_words.py  randomizer.py  words_loader.py  words_randomizer.py
randomit/parsers/: random_images.py
randomit/words_storage/: addresses_list.txt  cities_list.txt  countries_list.txt  surnames_list.txt
randomly/: __init__.py  __version__.py  random_word.py  random_words.txt
tests/: test_random_names_surnames.py  test_random_word.py  test_random_words.py  test_randomizer.py  test_randomly.py  test_words_loader.py  test_words_randomizer.py
