[tool.poetry]
name = "randomit"
homepage = "https://github.com/dimitryzub/randomit"
version = "0.1.0"
description = "Python library to generate random things."
authors = ["Dimitry Zub <dimitryzub@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
