[tool.poetry]
name = "randomit"
homepage = "https://github.com/dimitryzub/randomit"
documentation = "https://dimitryzub.github.io/randomit/docs/docs.html"
version = "0.2.4"
description = "Python library to generate random things."
authors = ["Dimitry Zub <dimitryzub@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.26.0"
lxml = "^4.6.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
